# ApplicantForm

./: .env  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml
src/app/: settings.py
src/config/: settings.py  storages.py  urls.py
src/form/: admin.py  exporter.py  models.py  urls.py  views.py
src/form/migrations/: 0001_initial.py
src/form/static/css/: styles.css
src/form/templates/: base.html
src/form/templates/forms/: admin_submission_detail.html  admin_submission_list.html  form_detail.html  form_edit.html  form_list.html  form_submission_detail.html  form_submit.html  form_success.html
src/form/templates/registration/: login.html  register.html
