[project]
name = "applicantform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.8.1",
    "django",
    "django-admin-relation-links>=0.2.5",
    "django-json-widget>=2.0.1",
    "django-simple-history>=3.8.0",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.10",
    "reportlab>=4.4.1",
    "sqlparse>=0.5.3",
]
